[package]
name = "something-something-farming"
homepage = "https://github.com/Jacudibu/something-something-farming"
version = "0.1.0"
edition = "2021"

[workspace]
resolver = "2"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = "0.12"
leafwing-input-manager = "0.11.2"
bevy_screen_diagnostics = "0.4.0"
bevy_ecs_tilemap = "0.12"
bevy_egui = "0.24.0"
bevy-inspector-egui = "0.22.1"
bevy_asset_loader = { version = "0.19.1", features = ["2d"] }

[patch.crates-io]
bevy_ecs_tilemap = { git = "https://github.com/StarArawn/bevy_ecs_tilemap", branch = "main" }
